view/theme/frio/css/style.css
/* ... */
#tabmenu .search-heading {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
ul.tabs {
    list-style: none;
    height: 100%;
    padding: 0;
    padding-top: 10px;
    margin: 0;
}
ul.tabs li {
    float: left;
    margin: 0;
    padding: 0;
    /*border-bottom: 0 solid #6fdbe8;*/
    border-bottom: 0 solid $link_color;
    font-size: 13px;
    height: 102%;
    transition: all .15s ease;
}
/*ul.tabs.visible-xs > li.active {
    min-width: 150px;  This is a workaround to make the topbar-second dropdown better visible on mobile. We need something better here
}*/
ul.tabs li a {
    margin-left: 10px;
    margin-right: 10px;
    /*color: #6fdbe8;*/
    color: $link_color !important;
}
ul.tabs li:hover, ul.tabs li.active {
    border-bottom-width: 4px;
}
ul.tabbar ul.tabs-extended li.active {
    width: 100%;
    border-bottom-width: 2px;
}
ul.tabbar ul.tabs-extended li.active a {
    background: none;
}
ul.dropdown-menu li:hover {
    border-bottom-width: 0;
}


/* Dropdown Menu */
.dropdown-menu li a,
.dropdown-menu li .btn-link {
    font-size: 13px!important;
    font-weight: 600!important;
}
.dropdown-menu li > :hover,
.dropdown-menu li > :visited,
.dropdown-menu li > :focus {
    background: 0 0;
}

.dropdown-menu li:first-child {
    margin-top: 3px;
}

/* Notificaiotn badges */
#mail-update-li.show {
    display: inline-block!important;
}

/* Media Classes */
.media .time,
.media .shared-time,
.media .delivery,
.media .location,
.media .location a {
    font-size: 11px;
    color: #bebebe;
}
.media-list > li {
    padding: 10px;
    border-bottom: 1px solid rgba(238, 238, 238, $contentbg_transp);
    position: relative;
/*    border-left: 3px solid rgba(255,255,255,$contentbg_transp);*/
    border-left: 3px solid rgba(255,255,255,0);
    font-size: 12px;
}
.media-list > li:hover,
.media-list > li.selected,
.media-list > li.active {
    border-left: 3px solid $link_color;
    background-color: rgba(247, 247, 247, $contentbg_transp);
}

/* Forms */
.form-control {
    border: 2px solid #ededed;
    box-shadow: none;
}
.form-control:focus {
    border: 2px solid $link_color;
    box-shadow: none;
}

.checkbox input[type="checkbox"]:focus + label::before,
.radio input[type="radio"]:focus + label::before {
	outline-color: $link_hover_color;
}

/* Search form */
.form-control.form-search {
    border-radius: 30px;
    background-image: url(img/icon_search16x16.png);
    background-repeat: no-repeat;
    background-position: 10px 8px;
    padding-left: 34px;
}
.form-group-search {
    position: relative;
    width: 100%;
}

.form-group-search .form-button-search {
    position: absolute;
    top: 4px;
    right: 4px;
    border-radius: 30px;
}
.search-input.form-control.form-search {
    width: 100%;
}
.search-heading {
    text-align: center;
    color: $link_color;
    font-size: 20px;
}
.search-content-wrapper > #search-header-wrapper {
    display: none;
}
.search-content-wrapper > .section-title-wrapper {
    display: none;
}
#navbar-button > #search-save {
    margin-top: 3px;
}
/* Section-Content-Wrapper */
#search-header-wrapper {
    padding: 15px;
    padding-bottom: 20px;
    margin-bottom: 20px;
    border: none;
    /*background-color: #fff;*/
    background-color: rgba(255,255,255,$contentbg_transp);
    border-radius: 4px;
    position: relative;
    /*overflow: hidden;*/
    color: #555;
    box-shadow: 0 0 3px #dadada;
    -webkit-box-shadow: 0 0 3px #dadada;
    -moz-box-shadow: 0 0 3px #dadada;
}

/* *******
 * PAGES
 *********/

.generic-page-wrapper, .contact-content-wrapper, .videos-content-wrapper,
 .suggest-content-wrapper, .common-content-wrapper, .help-content-wrapper,
.allfriends-content-wrapper, .match-content-wrapper, .dirfind-content-wrapper,
.delegation-content-wrapper, .notes-content-wrapper,
.message-content-wrapper, .apps-content-wrapper,
#adminpage, .delegate-content-wrapper, .uexport-content-wrapper,
.dfrn_request-content-wrapper,
.friendica-content-wrapper, .credits-content-wrapper, .nogroup-content-wrapper,
.profperm-content-wrapper, .invite-content-wrapper, .tos-content-wrapper,
.fsuggest-content-wrapper {
    min-height: calc(100vh - 150px);
    padding: 15px;
    padding-bottom: 20px;
    margin-bottom: 20px;
    border: none;
    /*background-color: #fff;*/
    background-color: rgba(255,255,255,$contentbg_transp);
    border-radius: 4px;
    position: relative;
    /*overflow: hidden;*/
    color: #555;
    box-shadow: 0 0 3px #dadada;
    -webkit-box-shadow: 0 0 3px #dadada;
    -moz-box-shadow: 0 0 3px #dadada;
}
#content:hover .page-action.faded-icon {
    opacity: 0.8;
    transition: all 0.25s ease-in-out;
}
#content .page-action.faded-icon:hover {
    opacity: 1;
}

.section-title-wrapper {
    overflow: hidden;
}
/* Home and Login Page */
body.mod-home nav.navbar .nav>li>a:hover {
    background-color: rgba(255,255,255,0.2);
}
body.mod-home .navbar #nav-login,
body.mod-login .navbar #nav-login {
    display: none;
}
/* Profile-page */
#profile-content-standard,
#profile-content-advanced {
    overflow: hidden;
}
#profile-menu {
    margin-top: 20px;
    margin-bottom: 20px;
}
.contact-block-div.forumlist-profile-advanced {
    float: left;
}

/* contacts page */
ul.viewcontact_wrapper {
    margin-left: -15px;
    margin-right: -15px;
}
ul.viewcontact_wrapper > li {
    padding-left: 15px;
}
.contact-wrapper {
/*    padding: 10px;
    border-bottom: 1px solid rgba(238, 238, 238, $contentbg_transp);;
    position: relative;*/
    /*border-left: 3px solid white;*/
}
.contact-wrapper .contact-photo-wrapper button {
    padding: 0;
}
.contact-wrapper.media {
    overflow: visible;
    word-wrap: break-word;
    margin-top: 0;
}
/* bootstrap hack for .media */
.contact-wrapper.media .media-body {
    display: table-cell;
    width: 10000px;
    *width: auto;
    *zoom: 1;
}
.contact-wrapper.media:before, .media:after {
    content: "";
    display: table;
}
.contact-wrapper.media:after {
    clear: both;
}
/* ... */

